README upgraded, new setup files, option "-liconv" removed, binary removed
Upgraded compile instructions in README.

New setup files by "libtoolize".

Removed option "-liconv", as libiconv is included in libc6.

Removed binary file "test-device".

--- a/README
+++ b/README
@@ -8,12 +8,16 @@ Installation instructions
 
 1. To compile the project from repository use
 
-cvs checkout -d ext:ipefser1.fzk.de:/home/ipefser1/kopmann/cvsroot fdhwlib
+cvs -d :ext:ipefser1.fzk.de:/home/ipefser1/kopmann/cvsroot checkout fdhwlib
+
+see README for creating the symlink "src" and commands to prepare compiling, then
+run "make" in directory akutil
+
 
 git clone ssh://ipefser1.fzk.de/home/ipefser1/kopmann/gitroot/kitcube-tools.git
+
 cd kitcube-tools/src
 ln -s <path-to-fdhwlib>/src/akutil .
-
 
 aclocal
 autoheader  --> config.h.in
