--- a/README
+++ b/README
@@ -17,7 +17,8 @@ run "make" in directory akutil
 git clone ssh://ipefser1.fzk.de/home/ipefser1/kopmann/gitroot/kitcube-tools.git
 
 cd kitcube-tools/src
-ln -s <path-to-fdhwlib>/src/akutil .
+ln -s <path-to-fdhwlib>/src/akutil
+ln -s <path-to-fdhwlib>/src/fdhwlib.h
 
 aclocal
 autoheader  --> config.h.in
