--- a/README
+++ b/README
@@ -8,23 +8,22 @@ Installation instructions
 
 1. To compile the project from repository use
 
+git clone ssh://ipefser1.fzk.de/home/ipefser1/kopmann/gitroot/kitcube-tools.git
+
+cd kitcube-tools
+
 cvs -d :ext:ipefser1.fzk.de:/home/ipefser1/kopmann/cvsroot checkout fdhwlib
 
 see README for creating the symlink "src" and commands to prepare compiling, then
 run "make" in directory akutil
 
-
-git clone ssh://ipefser1.fzk.de/home/ipefser1/kopmann/gitroot/kitcube-tools.git
-
-cd kitcube-tools/src
-ln -s <path-to-fdhwlib>/src/akutil
-ln -s <path-to-fdhwlib>/src/fdhwlib.h
-
-aclocal
-autoheader  --> config.h.in
-(libtoolize --copy --force)  --> config.sub, config.guess, ltmain.sh
-automake    --> Makefile.in
-autoconf    --> configure
+# aclocal
+# autoheader  --> config.h.in
+# (libtoolize --copy --force)  --> config.sub, config.guess, ltmain.sh
+# automake    --> Makefile.in
+# autoconf    --> configure
+# better use:
+autoreconf -vfi
 ./configure  --> <name>.in --> <name>
 make
 
