--- a/README
+++ b/README
@@ -21,6 +21,7 @@ run "make" in directory akutil
 # autoheader  --> config.h.in
 # (libtoolize --copy --force)  --> config.sub, config.guess, ltmain.sh
 # automake    --> Makefile.in
+# (automake --add-missing)
 # autoconf    --> configure
 # better use:
 autoreconf -vfi
