--- a/ChangeLog
+++ b/ChangeLog
@@ -77,6 +77,7 @@ Release notes
 --------------------------------------------------------------------------------------------
 
 Version 0.33: 
+ - Added push mode to rsync-scripts. Reporting required different handling of log files. 
  - Added detection of errors in the radio probe data format.
    BUT it is obvious that there are more things that can go wrong and are not detected.
    27.9.12 (ak)
