--- a/ChangeLog
+++ b/ChangeLog
@@ -87,8 +87,16 @@ Later:
 Release notes
 --------------------------------------------------------------------------------------------
 
-
-Version 0.33: 
+Version 0.34:
+ - Added latest changed to the repository at GITHUB 
+ - Modufied the script push_backup.sh to work with a whitelist instead of the exclude configuration.
+   (working name: push_backup_wl.sh)
+ - Added sensorGroup support for new EBM masts and first set of sensor definitions
+ - Added sensorGroup support for campbell loggers (flux, slow, rainwind)
+ - Reading header of a data file, if configuration file is missing.
+ - Added error handling if no data file are found
+   25.7.14 (ak)
+ 
  - Enhanced the CSV-Reader in DAQAsciiDevice in order to read the Campbell DataLogger-format A05.
    The header of this format is not detectable by comment characters and a human readable timestamp
    is used. 
@@ -96,6 +104,8 @@ Version 0.33:
    splitting it in tags. This is necessary if timestamp formats used by strptime should be read from 
    the inifile.
    14.1.14 (ak)
+
+Version 0.33:
  - Added campaign name to script configuration file.
    26.6.13 (ak)
  - Improved error handling of kitcube-status display. The function getadeidata and getadeiplot now
