--- a/kitcube-status/README
+++ b/kitcube-status/README
@@ -2,6 +2,16 @@ README detectorstatus
 A. Kopmann
 
 
+
+TODO (3.8.14):
+--------------
+- getadeidata.cgi: The ADEI sensor names need to be in an ascending order. 
+  It looks like the request from ADEI comes back always in this order nd not the order given 
+  in the request.
+- Stop requesting data from groups that deliver no data in the first request.
+
+
+
 TODO (1.3.13):
 --------------
 - getadeidata.cgi: If not all groups are available then no data is transfered instead
@@ -57,6 +67,10 @@ TODO (30.5.2012):
 
 ChangeLog:
 ----------
+- Update for HEADS campaign
+  (8/14, ak)
+- Added display for HATPRO
+  (4/14, chuan)
 - Added service for GUDE remote power plugs. 
   The data is retrieved by snmp protocol. Only configured channles are display.
 - Added service for cloud camera. 
