Added support for nan's in the ceilometer files

--- a/ChangeLog
+++ b/ChangeLog
@@ -13,6 +13,22 @@ TODO:
   furhter information from the header and define the appropriate timestamp format.
   Also a data reader for the Campbell should be added.
 - Decode the binary data format?!
+- use NAN insstead of noData
+
+#include <iostream>
+#include <cmath>
+#include <cfloat>
+ 
+int main()
+{
+    std::cout << std::boolalpha
+              << "isnan(NaN) = " << std::isnan(NAN) << '\n'
+              << "isnan(Inf) = " << std::isnan(INFINITY) << '\n'
+              << "isnan(0.0) = " << std::isnan(0.0) << '\n'
+              << "isnan(DBL_MIN/2.0) = " << std::isnan(DBL_MIN/2.0) << '\n'
+              << "isnan(0.0 / 0.0)   = " << std::isnan(0.0/0.0) << '\n'
+              << "isnan(Inf - Inf)   = " << std::isnan(INFINITY - INFINITY) << '\n';
+}
 
 
 Roadmap
